--- a/Master Arbeit/bachelorthesis.tex
+++ b/Master Arbeit/bachelorthesis.tex
@@ -312,11 +312,15 @@ style=alphabetic
 %----------------- KAPITEL : Anforderungsanalyse  ----------------- %
 \include{chapter/anforderungsanalyse}
 
+\include{chapter/darstellungExistierenderLösungen}
+
+\include{chapter/vergleich}
+
 %----------------- KAPITEL : System-Design  ----------------- %
-\include{chapter/systemdesign}
+%\include{chapter/systemdesign}
 
 %----------------- KAPITEL : Implementierung  --------------------- %	
-\include{chapter/implementierung}
+%\include{chapter/implementierung}
 
 %----------------- KAPITEL : Evaluation  --------------------- %	
 \include{chapter/evaluation}
