--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -199,6 +199,14 @@
 	url = {https://www.oecd.org/sti/ieconomy/49338380.pdf}
 }
 
+@article{ID27,
+	title = {Luniverse},
+	OPTsubtitle = {
+	Your Portal to Web3
+	Embark on your Web3 journey with the streamlined, scalable, and secure development platform},
+	date = {2023-ß8-20},
+	url = {https://luniverse.io}
+}
 
 
 	
