added more soluation

--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -204,9 +204,89 @@
 	OPTsubtitle = {
 	Your Portal to Web3
 	Embark on your Web3 journey with the streamlined, scalable, and secure development platform},
-	date = {2023-ß8-20},
+	date = {2023-08-20},
 	url = {https://luniverse.io}
 }
 
+@article{ID28,
+	title = {Blockchain Autumn School 2020},
+	OPTsubtitle = {Self-Sovereign Identity in der praktischen Nutzung},
+	date = {2023-08-23},
+	url = {https://esatus.com/wp-content/uploads/Actionlog_BAS_SSI_in_der_praktischen_Nutzung_20201009.pdf}
+}
 
-	
+
+@article{ID29,
+	title = {Ethereum},
+	OPTsubtitle = {Sidechains},
+	date = {2023-08-23},
+	url = {https://ethereum.org/de/developers/docs/scaling/sidechains/}
+}
+
+@article{ID30,
+	title = {Dock},
+	OPTsubtitle = {A Blockchain Built for Decentralized Identity},
+	date = {2023-08-23},
+	url = {https://www.dock.io/feature/blockchain}
+}
+
+@article{ID31,
+	title = {Polygon},
+	OPTsubtitle = {Identity infrastructure for Web3},
+	date = {2023-08-24},
+	url = {https://polygon.technology/polygon-id}
+}
+
+@article{ID32,
+	title = {Web3 University},
+	OPTsubtitle = {Ethereum Sidechains vs Layer 2s: What’s the Difference?},
+	date = {2023-08-26},
+	url = {https://www.web3.university/article/sidechains-vs-layer2s}
+}
+
+
+
+@article{ID33,
+	title = {Use Ethereum},
+	OPTsubtitle = {Plasma chains},
+	date = {2023-08-26},
+	url = {https://ethereum.org/en/developers/docs/scaling/plasma/}
+}
+
+@book{ID34,
+	author = {SUMIT KUMAR RANA and ARUN KUMAR RANA and SANJEEV KUMAR RANA and VISHNU SHARMA and 
+	UMESH KUMAR LILHORE and OSAMAH IBRAHIM KHALAF and ANTONINO GALLETTA},
+	title = {Decentralized Model to Protect Digital Evidence via Smart Contracts Using Layer 2 Polygon Blockchain},
+	date = {2023-07-07},
+	OPTpublisher = {IEEE},
+	OPTpages = {83289}
+}
+
+@article{ID35,
+	title = {Use Ethereum},
+	OPTsubtitle = {Optimistische Rollups},
+	date = {2023-08-26},
+	url = {https://ethereum.org/de/developers/docs/scaling/optimistic-rollups/}
+}
+
+@article{ID36,
+	title = {Polygon},
+	OPTsubtitle = {Proven scalability on Ethereum},
+	date = {2023-08-26},
+	url = {https://polygon.technology/polygon-pos}
+}
+
+@article{ID37,
+	title = {crypto.news},
+	OPTsubtitle = {Polygon ID becomes available on Ethereum after partnership with Rarimo },
+	date = {2023-08-26},
+	url = {https://crypto.news/polygon-id-becomes-available-on-ethereum-after-partnership-with-rarimo/}
+}
+
+@article{ID38,
+	title = {Polygon ID Documentation tutorials},
+	OPTsubtitle = {Issuer Node Overview},
+	date = {2023-08-26},
+	url = {https://0xpolygonid.github.io/tutorials/issuer-node/issuer-node-overview/}
+}
+
