--- a/Master Arbeit/bachelorthesis.tex
+++ b/Master Arbeit/bachelorthesis.tex
@@ -24,6 +24,8 @@
 \usepackage[ngerman]{babel} % deutsche Silbentrennung
 \usepackage{blindtext} % Für den Beispieltext
 \usepackage{comment}
+\usepackage{lscape}
+\usepackage{colortbl}
 
 \usepackage{booktabs} % entzerrt die Tabellenzeilen und bietet verschieden dicke Unterteilungslinien
 \usepackage{longtable} % Tabellen können sich nicht über mehrere Seiten 
@@ -91,6 +93,7 @@ style=alphabetic
 
 % LSTCOLORS
 \definecolor{background}{HTML}{F1F1F1}
+\definecolor{lavender}{rgb}{0.9, 0.9, 0.98}
 
 % Genrell Settings
 \lstset{
