--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -290,3 +290,86 @@
 	url = {https://0xpolygonid.github.io/tutorials/issuer-node/issuer-node-overview/}
 }
 
+@article{ID39,
+	title = {Sovrin},
+	OPTsubtitle = {Sovrin Network},
+	date = {2023-08-27},
+	url = {https://sovrin.org/}
+}
+
+@article{ID40,
+	title = {Sovrin},
+	OPTsubtitle = {A Protocol and Token for Self-Sovereign Identity and Decentralized Trust},
+	date = {2023-08-27},
+	url = {https://sovrin.org/wp-content/uploads/Sovrin-Protocol-and-Token-White-Paper.pdf},
+	OPTpages = {15}
+}
+
+@article{ID41,
+	title = {Sovrin},
+	OPTsubtitle = {A Protocol and Token for Self-Sovereign Identity and Decentralized Trust},
+	date = {2023-08-27},
+	url = {https://sovrin.org/wp-content/uploads/Sovrin-Protocol-and-Token-White-Paper.pdf},
+	OPTpages = {17}
+}
+
+@article{ID42,
+	title = {Statista},
+	OPTsubtitle = {Number of worldwide internet hosts in the domain name system (DNS) from 1993 to 2019},
+	date = {2023-08-27},
+	url = {https://www.statista.com/statistics/264473/number-of-internet-hosts-in-the-domain-name-system/},
+}
+
+
+@article{ID43,
+	title = {Sovrin},
+	OPTsubtitle = {Sovrin FAQ},
+	date = {2023-09-01},
+	url = {https://sovrin.org/faqs/},
+}
+
+
+@article{ID44,
+	title = {Dock Blog — How Dock Compares to Blockcerts},
+	OPTsubtitle = {How Dock Compares to Blockcerts},
+	date = {2023-09-02},
+	url = {https://blog.dock.io/how-dock-compares-to-blockcerts/},
+}
+
+@article{ID45,
+	title = {Polygonscan Support Center},
+	OPTsubtitle = {What is Gas Fee? },
+	date = {2023-09-02},
+	url = {https://support.polygonscan.com/support/solutions/articles/69000793833-what-is-gas-fee-%E2%9B%BD},
+}
+
+@book{ID46,
+	author = {Paul Dunphy AND Fabien A. P. Petitcolas},
+	title = {A First Look at Identity Management Schemes on the Blockchain},
+	date = {2018-01-01},
+	OPTpublisher = {Innovation Centre, VASCO Data Security},
+	OPTpages = {10}
+}
+
+@book{ID47,
+	author = {Paul Dunphy AND Fabien A. P. Petitcolas},
+	title = {A First Look at Identity Management Schemes on the Blockchain},
+	date = {2018-01-01},
+	OPTpublisher = {Innovation Centre, VASCO Data Security},
+	OPTpages = {11}
+}
+
+@article{ID48,
+	title = {Blockchain Academy},
+	OPTsubtitle = {Calculation of Bitcoin Transaction Fees Explained},
+	date = {2023-09-05},
+	url = {https://blockchain-academy.hs-mittweida.de/2023/02/calculation-of-bitcoin-transaction-fees-explained/},
+}
+
+
+@article{ID49,
+	title = {YCharts},
+	OPTsubtitle = {Bitcoin Average Transaction Fee (I:BATF)},
+	date = {2023-09-05},
+	url = {https://ycharts.com/indicators/bitcoin_average_transaction_fee},
+}
