--- a/Master Arbeit/bachelorthesis.tex
+++ b/Master Arbeit/bachelorthesis.tex
@@ -320,7 +320,7 @@ style=alphabetic
 \include{chapter/vergleich}
 
 %----------------- KAPITEL : System-Design  ----------------- %
-%\include{chapter/systemdesign}
+\include{chapter/systemdesign}
 
 %----------------- KAPITEL : Implementierung  --------------------- %	
 %\include{chapter/implementierung}
