--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -373,3 +373,51 @@
 	date = {2023-09-05},
 	url = {https://ycharts.com/indicators/bitcoin_average_transaction_fee},
 }
+
+@article{ID50,
+	title = {Luniverse Nova},
+	OPTsubtitle = {Luniverse LIVE NFT},
+	date = {2023-09-24},
+	url = {https://www.luniverse.io/live-nft/}
+}
+
+
+@article{ID51,
+	title = {Coinmerce},
+	OPTsubtitle = {Was ist Proof of Authority?},
+	date = {2023-09-24},
+	url = {https://coinmerce.io/de/lernen/was-ist-proof-of-authority/}
+}
+
+@article{ID52,
+	title = {Ethereum},
+	OPTsubtitle = {Ethereum roadmap},
+	date = {2023-09-24},
+	url = {https://ethereum.org/en/roadmap/}
+}
+
+@article{ID53,
+	title = {BTC-Echo},
+	OPTsubtitle = {Proof of Stake: Die Vor- und Nachteile des Konsensverfahrens},
+	date = {2023-09-24},
+	url = {https://www.btc-echo.de/news/proof-of-stake-die-vor-und-nachteile-des-konsensverfahrens-107623/}
+}
+
+@article{ID54,
+	title = {Bitpanda},
+	OPTsubtitle = {Konsens-Algorithmen: Proof of Work },
+	date = {2023-09-30},
+	url = {https://www.bitpanda.com/academy/de/lektionen/konsens-algorithmen-proof-of-work/#:~:text=Proof%20of%20Work%20ist%20der%20Konsens%2DAlgorithmus%2C%20der%20der%20Bitcoin,Regel%20durch%20Rechenleistung%20%2D%20verrichten%20m%C3%BCssen.}
+}
+
+@article{ID55,	
+	author={Rana, Sumit Kumar and Rana, Arun Kumar and Rana, Sanjeev Kumar and Sharma, Vishnu and Lilhore, Umesh Kumar and Khalaf, Osamah Ibrahim and Galletta, Antonino},	
+	journal={IEEE Access}, 
+	title={Decentralized Model to Protect Digital Evidence via Smart Contracts Using Layer 2 Polygon Blockchain}, 	
+	year={2023},	
+	volume={11},		
+	pages={83289-83300},	
+	doi={10.1109/ACCESS.2023.3302771}
+}
+
+
