--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -426,3 +426,10 @@
 	date = {2023-10-25},
 	url = {https://0xpolygonid.github.io/tutorials/issuer/on-chain-issuer/on-chain-overview/#smart-contracts}
 }
+
+@article{ID57
+	title = {Polygon ID Documentation tutorials},
+	OPTsubtitle = {QueryBuilder},
+	date = {2023-10-27},
+	url = {https://0xpolygonid.github.io/tutorials/verifier/query-builder/#:~:text=In%20Polygon%20ID%2C%20this%20useful,being%20at%20a%20certain%20age.}
+}
