--- a/Master Arbeit/bachelorthesis.tex
+++ b/Master Arbeit/bachelorthesis.tex
@@ -26,6 +26,7 @@
 \usepackage{comment}
 \usepackage{lscape}
 \usepackage{colortbl}
+\usepackage{amsfonts}
 
 \usepackage{booktabs} % entzerrt die Tabellenzeilen und bietet verschieden dicke Unterteilungslinien
 \usepackage{longtable} % Tabellen können sich nicht über mehrere Seiten 
@@ -378,10 +379,5 @@ style=alphabetic
 \printbibliography
 \addcontentsline{toc}{chapter}{Literatur}
 
-%----------------- KAPITEL : Codebeispiele  --------------------- %	
-\include{chapter/codebeispiele}
-
-%----------------- KAPITEL : Evaluierungsergebnisse  --------------------- %	
-\include{chapter/evaluierungsergebnisse}
 
 \end{document}
