--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -427,9 +427,36 @@
 	url = {https://0xpolygonid.github.io/tutorials/issuer/on-chain-issuer/on-chain-overview/#smart-contracts}
 }
 
-@article{ID57
+@article{ID57,
 	title = {Polygon ID Documentation tutorials},
 	OPTsubtitle = {QueryBuilder},
 	date = {2023-10-27},
 	url = {https://0xpolygonid.github.io/tutorials/verifier/query-builder/#:~:text=In%20Polygon%20ID%2C%20this%20useful,being%20at%20a%20certain%20age.}
+}
+
+@article{ID58,
+	title = {Polygon ID Documentation tutorials},
+	OPTsubtitle = {Polygon ID Wallet Overview},
+	date = {2023-10-28},
+	url = {https://0xpolygonid.github.io/tutorials/wallet/wallet-sdk/polygonid-app/}
+}
+
+@article{ID59,
+	title = {Microsoft Threat Modeling Tool-Bedrohungen},
+	OPTsubtitle = {STRIDE-Modell},
+	date = {2023-10-29},
+	url = {https://learn.microsoft.com/de-de/azure/security/develop/threat-modeling-tool-threats}
+}
+
+@article{ID60,
+	title = {BSI},
+	OPTsubtitle = {Creating Secure Passwords},
+	date = {2023-10-29},
+	url = {https://www.bsi.bund.de/EN/Themen/Verbraucherinnen-und-Verbraucher/Informationen-und-Empfehlungen/Cyber-Sicherheitsempfehlungen/Accountschutz/Sichere-Passwoerter-erstellen/sichere-passwoerter-erstellen_node.html}
+}
+@article{ID61,
+	title = {Security at Alchemy},
+	OPTsubtitle = {Data Security},
+	date = {2023-10-29},
+	url = {https://www.alchemy.com/security}
 }
