--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -2,7 +2,8 @@
 	Author ={Andrew Tobin and Drummond Reed},
 	Pages = {1-23},
 	Title = {The Inevitable Rise of Self-Sovereign Identity},
-	Year = {2017}
+	Year = {2017},
+	org = {Sovrin}
 }
 	
 @article{ID1,
@@ -73,27 +74,35 @@
 }
 
 @article{ID10,
-	author = {CTRL-SHIFT},
+	author = {Alan Mitchell and Jamie Smith},
+	OPTsubtitle = {Economics of Identity White Paper},
+	org = {CTRL-SHIFT},
 	title = {Economics of Identity},
 	Year = {2015}
 }
 
-@article{ID11,
+@online{ID11,
 	author = {Statista},
 	title = {Why Do Shoppers Drop Out of an Online Purchase},
-	Year = {2012}
+	Year = {2012},
+	url = {https://www.statista.com/topics/7868/online-checkout-behavior-and-e-commerce-conversions-worldwide/#topicOverview}
+	urldate = {2023-11-23}
 }
 
-@article{ID12,
+@online{ID12,
 	author = {Hal Lockhart and Thomas Wisniewski and Prateek Mishra and Nick Ragouzis and John Hughes and Eve Maler},
 	title = {Security Assertion Markup Language (SAML) V2.0 Technical Overview},
-	Year = {2005}
+	url = {http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-tech-overview-2.0.html}
+	Year = {2005},
+	urldate = {2023-11-23}
 }
 
 @online{ID13,
 	title = {OpenID},
-	date = {2023-06-17},
+	OPTsubtitle = {Our mission is to lead the global [...]}
+	urldate = {2023-06-17},
 	url = {https://openid.net/},
+	year = {2010-09-30}
 }
 
 @online{ID14,
@@ -111,13 +120,15 @@
 	ALTauthor = {Kai Schiller},
 	title = {Die Chain Key Technologie: Schlüssel des Internet Computers},
 	url = {https://internet-computer.de/wissen/chain-key-technologie-kryptographie/},
-	OPTdate = {2023-06-17},
+	urldate = {2023-11-23}
 }
 
 @online{ID16,
 	title = {Introduction to Self-Sovereign Identity (SSI)},
-	date = {2023-06-26},
-	url = {https://walt.id/white-paper/self-sovereign-identity-ssi}
+	OPTsubtitle = {Summary | TL;DR},
+	year = {2015},
+	url = {https://walt.id/white-paper/self-sovereign-identity-ssi},
+	urldate = {2023-11-23}
 }
 
 @article{ID17,
@@ -125,26 +136,30 @@
 	title = {Sovereignty, privacy, and ethics in blockchain‑based identity
 	management systems},
 	date = {2020-11-30},
-	journaltitle = {Ethics and Information Technology}
+	journaltitle = {Ethics and Information Technology},
+	pages = {239–252}
 }
 
-@article{ID18,
+@online{ID18,
 	title = {Decentralized Identifiers (DIDs) v1.0},
-	date = {2023-06-30},
-	url = {https://www.w3.org/TR/did-core/}
+	OPTsubtitle = {Core architecture, data model, and representations}
+	urldate = {2023-06-30},
+	url = {https://www.w3.org/TR/did-core/},
+	year = {2015}
 }
 
-@article{ID19,
+@online{ID19,
 	title = {Trade-offs between Distributed Ledger Technology Characteristics},
 	author = {NICLAS KANNENGIEßER and SEBASTIAN LINS and TOBIAS DEHLING and ALI SUNYAEV},
-	date = {2023-05-1},
-	url = {https://www.w3.org/TR/did-core/}
+	urldate = {2023-05-01},
+	url = {https://www.w3.org/TR/did-core/},
+	year = {2000}
 }
 
 @article{ID20,
 	author = {Leslie Lamport and Robert Shostak and Marshall Pease},
 	title = {The byzantine generals problem},
-	journaltitle = {ACM Trans. Program.Lang. Syst. 4, 3 },
+	journaltitle = {ACM Trans. Program.Lang. Syst. 4, 3},
 	Year = {1982},
 	OPTpages = {382–401} 
 		
@@ -163,7 +178,9 @@
 @article{ID22,
 	author = {Du Mingxiao and Ma Xiaofeng and Zhang Zhe and Wang Xiangwei and Chen Qijun},
 	title = {A Review on Consensus Algorithm of Blockchain},
-	date = {2017-10-5}	
+	date = {2017-10-5},
+	OPTpublisher = {IEEE},
+	pages = {152-189}	
 }
 
 
@@ -189,17 +206,20 @@
 @online{ID25,
 	title = {Identity Management System Requirements},
 	url = {https://ebrary.net/24577/computer_science/identity_management_system_requirements#gads_btm},
-	OPTdate = {2023-07-23},
+	urldate = {2023-07-23},
+	year = {2015}
 }
 
 @article{ID26,
 	title = {Digital Identity Management},
 	OPTsubtitle = {Enabling Innovation and Trust in the Internet Economy},
-	date = {2011-01-01},
-	url = {https://www.oecd.org/sti/ieconomy/49338380.pdf}
+	urldate = {2023-07-23},
+	url = {https://www.oecd.org/sti/ieconomy/49338380.pdf},
+	org = {OECD},
+	year = {2011}
 }
 
-@article{ID27,
+@online{ID27,
 	title = {Luniverse},
 	OPTsubtitle = {
 	Your Portal to Web3
@@ -211,46 +231,51 @@
 @article{ID28,
 	title = {Blockchain Autumn School 2020},
 	OPTsubtitle = {Self-Sovereign Identity in der praktischen Nutzung},
-	date = {2023-08-23},
-	url = {https://esatus.com/wp-content/uploads/Actionlog_BAS_SSI_in_der_praktischen_Nutzung_20201009.pdf}
+	urldate = {2023-08-23},
+	url = {https://esatus.com/wp-content/uploads/Actionlog_BAS_SSI_in_der_praktischen_Nutzung_20201009.pdf},
+	year = {2022}
 }
 
 
-@article{ID29,
+@online{ID29,
 	title = {Ethereum},
 	OPTsubtitle = {Sidechains},
-	date = {2023-08-23},
-	url = {https://ethereum.org/de/developers/docs/scaling/sidechains/}
+	urldate = {2023-08-23},
+	url = {https://ethereum.org/de/developers/docs/scaling/sidechains/},
+	year = {2015}
 }
 
-@article{ID30,
+@online{ID30,
 	title = {Dock},
 	OPTsubtitle = {A Blockchain Built for Decentralized Identity},
-	date = {2023-08-23},
-	url = {https://www.dock.io/feature/blockchain}
+	urldate = {2023-08-23},
+	url = {https://www.dock.io/feature/blockchain},
+	year = {2020}
 }
 
-@article{ID31,
+@online{ID31,
 	title = {Polygon},
 	OPTsubtitle = {Identity infrastructure for Web3},
-	date = {2023-08-24},
-	url = {https://polygon.technology/polygon-id}
+	urldate = {2023-08-24},
+	url = {https://polygon.technology/polygon-id},
+	year = {2020}
 }
 
-@article{ID32,
+@online{ID32,
 	title = {Web3 University},
 	OPTsubtitle = {Ethereum Sidechains vs Layer 2s: What’s the Difference?},
-	date = {2023-08-26},
-	url = {https://www.web3.university/article/sidechains-vs-layer2s}
+	urldate = {2023-08-26},
+	url = {https://www.web3.university/article/sidechains-vs-layer2s},
+	year = {2020}
 }
-
 
 
 @article{ID33,
 	title = {Use Ethereum},
 	OPTsubtitle = {Plasma chains},
-	date = {2023-08-26},
-	url = {https://ethereum.org/en/developers/docs/scaling/plasma/}
+	urldate = {2023-08-26},
+	url = {https://ethereum.org/en/developers/docs/scaling/plasma/},
+	year = {2020}
 }
 
 @book{ID34,
@@ -262,39 +287,44 @@
 	OPTpages = {83289}
 }
 
-@article{ID35,
+@online{ID35,
 	title = {Use Ethereum},
 	OPTsubtitle = {Optimistische Rollups},
-	date = {2023-08-26},
-	url = {https://ethereum.org/de/developers/docs/scaling/optimistic-rollups/}
+	urldate = {2023-08-26},
+	url = {https://ethereum.org/de/developers/docs/scaling/optimistic-rollups/},
+	year = {2020}
 }
 
-@article{ID36,
+@online{ID36,
 	title = {Polygon},
 	OPTsubtitle = {Proven scalability on Ethereum},
-	date = {2023-08-26},
-	url = {https://polygon.technology/polygon-pos}
+	urldate = {2023-08-26},
+	url = {https://polygon.technology/polygon-pos},
+	year = {2020}
 }
 
-@article{ID37,
+@online{ID37,
 	title = {crypto.news},
 	OPTsubtitle = {Polygon ID becomes available on Ethereum after partnership with Rarimo },
-	date = {2023-08-26},
-	url = {https://crypto.news/polygon-id-becomes-available-on-ethereum-after-partnership-with-rarimo/}
+	urldate = {2023-08-26},
+	url = {https://crypto.news/polygon-id-becomes-available-on-ethereum-after-partnership-with-rarimo/},
+	year = {2023}
 }
 
-@article{ID38,
+@online{ID38,
 	title = {Polygon ID Documentation tutorials},
 	OPTsubtitle = {Issuer Node Overview},
-	date = {2023-08-26},
-	url = {https://0xpolygonid.github.io/tutorials/issuer-node/issuer-node-overview/}
+	urldate = {2023-08-26},
+	url = {https://0xpolygonid.github.io/tutorials/issuer-node/issuer-node-overview/},
+	year = {2017}
 }
 
-@article{ID39,
+@online{ID39,
 	title = {Sovrin},
 	OPTsubtitle = {Sovrin Network},
-	date = {2023-08-27},
-	url = {https://sovrin.org/}
+	urldate = {2023-08-27},
+	url = {https://sovrin.org/},
+	year = {2016}
 }
 
 @article{ID40,
@@ -313,7 +343,7 @@
 	OPTpages = {17}
 }
 
-@article{ID42,
+@online{ID42,
 	title = {Statista},
 	OPTsubtitle = {Number of worldwide internet hosts in the domain name system (DNS) from 1993 to 2019},
 	date = {2023-08-27},
@@ -321,26 +351,29 @@
 }
 
 
-@article{ID43,
+@online{ID43,
 	title = {Sovrin},
 	OPTsubtitle = {Sovrin FAQ},
-	date = {2023-09-01},
+	urldate = {2023-09-01},
 	url = {https://sovrin.org/faqs/},
+	year = {2019}
 }
 
 
-@article{ID44,
+@online{ID44,
 	title = {Dock Blog — How Dock Compares to Blockcerts},
 	OPTsubtitle = {How Dock Compares to Blockcerts},
-	date = {2023-09-02},
+	urldate = {2023-09-02},
 	url = {https://blog.dock.io/how-dock-compares-to-blockcerts/},
+	year = {2023}
 }
 
-@article{ID45,
+@online{ID45,
 	title = {Polygonscan Support Center},
-	OPTsubtitle = {What is Gas Fee? },
-	date = {2023-09-02},
+	OPTsubtitle = {What is Gas Fee?},
+	urldate = {2023-09-02},
 	url = {https://support.polygonscan.com/support/solutions/articles/69000793833-what-is-gas-fee-%E2%9B%BD},
+	year = {2023}
 }
 
 @book{ID46,
@@ -359,55 +392,63 @@
 	OPTpages = {11}
 }
 
-@article{ID48,
+@online{ID48,
 	title = {Blockchain Academy},
 	OPTsubtitle = {Calculation of Bitcoin Transaction Fees Explained},
-	date = {2023-09-05},
+	urldate = {2023-09-05},
 	url = {https://blockchain-academy.hs-mittweida.de/2023/02/calculation-of-bitcoin-transaction-fees-explained/},
+	year = {2012}
 }
 
 
-@article{ID49,
+@online{ID49,
 	title = {YCharts},
 	OPTsubtitle = {Bitcoin Average Transaction Fee (I:BATF)},
-	date = {2023-09-05},
+	urldate = {2023-09-05},
 	url = {https://ycharts.com/indicators/bitcoin_average_transaction_fee},
+	year = {2005}
 }
 
-@article{ID50,
+@online{ID50,
 	title = {Luniverse Nova},
 	OPTsubtitle = {Luniverse LIVE NFT},
 	date = {2023-09-24},
-	url = {https://www.luniverse.io/live-nft/}
+	urldate = {https://www.luniverse.io/live-nft/},
+	year = {2022}
 }
 
 
-@article{ID51,
+@online{ID51,
 	title = {Coinmerce},
 	OPTsubtitle = {Was ist Proof of Authority?},
-	date = {2023-09-24},
-	url = {https://coinmerce.io/de/lernen/was-ist-proof-of-authority/}
+	urldate = {2023-09-24},
+	url = {https://coinmerce.io/de/lernen/was-ist-proof-of-authority/},
+	year = {2020}
 }
 
-@article{ID52,
+@online{ID52,
 	title = {Ethereum},
 	OPTsubtitle = {Ethereum roadmap},
 	date = {2023-09-24},
-	url = {https://ethereum.org/en/roadmap/}
+	urldate = {https://ethereum.org/en/roadmap/},
+	year = {2020}
+	
 }
 
-@article{ID53,
+@online{ID53,
 	title = {BTC-Echo},
 	OPTsubtitle = {Proof of Stake: Die Vor- und Nachteile des Konsensverfahrens},
 	date = {2023-09-24},
-	url = {https://www.btc-echo.de/news/proof-of-stake-die-vor-und-nachteile-des-konsensverfahrens-107623/}
+	urldate = {https://www.btc-echo.de/news/proof-of-stake-die-vor-und-nachteile-des-konsensverfahrens-107623/},
+	year = {2020}
 }
 
-@article{ID54,
+@online{ID54,
 	title = {Bitpanda},
 	OPTsubtitle = {Konsens-Algorithmen: Proof of Work },
-	date = {2023-09-30},
-	url = {https://www.bitpanda.com/academy/de/lektionen/konsens-algorithmen-proof-of-work/#:~:text=Proof%20of%20Work%20ist%20der%20Konsens%2DAlgorithmus%2C%20der%20der%20Bitcoin,Regel%20durch%20Rechenleistung%20%2D%20verrichten%20m%C3%BCssen.}
+	urldate = {2023-09-30},
+	url = {https://www.bitpanda.com/academy/de/lektionen/konsens-algorithmen-proof-of-work/#:~:text=Proof%20of%20Work%20ist%20der%20Konsens%2DAlgorithmus%2C%20der%20der%20Bitcoin,Regel%20durch%20Rechenleistung%20%2D%20verrichten%20m%C3%BCssen.},
+	year = {2020}
 }
 
 @article{ID55,	
@@ -420,43 +461,65 @@
 	doi={10.1109/ACCESS.2023.3302771}
 }
 
-@article{ID56,
+@online{ID56,
 	title = {Polygon ID Documentation tutorials},
 	OPTsubtitle = {Overview},
-	date = {2023-10-25},
-	url = {https://0xpolygonid.github.io/tutorials/issuer/on-chain-issuer/on-chain-overview/#smart-contracts}
+	urldate = {2023-10-25},
+	url = {https://0xpolygonid.github.io/tutorials/issuer/on-chain-issuer/on-chain-overview/#smart-contracts},
+	year = {2020}
 }
 
-@article{ID57,
+@online{ID57,
 	title = {Polygon ID Documentation tutorials},
 	OPTsubtitle = {QueryBuilder},
-	date = {2023-10-27},
-	url = {https://0xpolygonid.github.io/tutorials/verifier/query-builder/#:~:text=In%20Polygon%20ID%2C%20this%20useful,being%20at%20a%20certain%20age.}
+	urldate = {2023-10-27},
+	url = {https://0xpolygonid.github.io/tutorials/verifier/query-builder/#:~:text=In%20Polygon%20ID%2C%20this%20useful,being%20at%20a%20certain%20age.},
+	year = {2020}
 }
 
-@article{ID58,
+@online{ID58,
 	title = {Polygon ID Documentation tutorials},
 	OPTsubtitle = {Polygon ID Wallet Overview},
 	date = {2023-10-28},
 	url = {https://0xpolygonid.github.io/tutorials/wallet/wallet-sdk/polygonid-app/}
 }
 
-@article{ID59,
+@online{ID59,
 	title = {Microsoft Threat Modeling Tool-Bedrohungen},
 	OPTsubtitle = {STRIDE-Modell},
-	date = {2023-10-29},
-	url = {https://learn.microsoft.com/de-de/azure/security/develop/threat-modeling-tool-threats}
+	urldate = {2023-10-29},
+	url = {https://learn.microsoft.com/de-de/azure/security/develop/threat-modeling-tool-threats},
+	year = {2016}
 }
 
-@article{ID60,
+@online{ID60,
 	title = {BSI},
 	OPTsubtitle = {Creating Secure Passwords},
-	date = {2023-10-29},
-	url = {https://www.bsi.bund.de/EN/Themen/Verbraucherinnen-und-Verbraucher/Informationen-und-Empfehlungen/Cyber-Sicherheitsempfehlungen/Accountschutz/Sichere-Passwoerter-erstellen/sichere-passwoerter-erstellen_node.html}
+	urldate = {2023-10-29},
+	url = {https://www.bsi.bund.de/EN/Themen/Verbraucherinnen-und-Verbraucher/Informationen-und-Empfehlungen/Cyber-Sicherheitsempfehlungen/Accountschutz/Sichere-Passwoerter-erstellen/sichere-passwoerter-erstellen_node.html},
+	year = {2022}
+	
 }
-@article{ID61,
+@online{ID61,
 	title = {Security at Alchemy},
 	OPTsubtitle = {Data Security},
-	date = {2023-10-29},
-	url = {https://www.alchemy.com/security}
+	urldate = {2023-10-29},
+	url = {https://www.alchemy.com/security},
+	year = {2020}
 }
+
+@online{ID62,
+	title = {Adnovum},
+	OPTsubtitle = {Self-Sovereign Identity: How it Works and How it Impacts our Lives},
+	urldate = {2023-11-03},
+	url = {https://www.adnovum.com/blog/self-sovereign-identity-ssi-switzerland},
+	year = {2015}
+}
+
+@online{ID63,
+	title = {The Missing Layer of the Internet: (Self-Sovereign) Identity},
+	urldate = {2023-11-09},
+	url = {https://medium.com/@umutyorulmaz11/the-missing-layer-of-the-internet-self-sovereign-identity-1f26b201c024},
+	year = {2023}
+}
+
