--- a/Master Arbeit/bachelorthesis.tex
+++ b/Master Arbeit/bachelorthesis.tex
@@ -356,7 +356,7 @@ style=alphabetic
 
 \include{chapter/darstellungExistierenderLösungen}
 
-\include{chapter/vergleich}
+%\include{chapter/vergleich}
 
 %----------------- KAPITEL : System-Design  ----------------- %
 \include{chapter/systemdesign}
@@ -377,6 +377,7 @@ style=alphabetic
 %----------------- ANHANG (ROMAN) -------------%
 \pagestyle{plain}
 \pagenumbering{Roman}
+
 
 
 %----------------- Literaturverzeichnnis ------------------%
