--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -523,3 +523,9 @@
 	year = {2023}
 }
 
+@online{ID64,
+	title = {Cost per leaked record in data breaches worldwide from 2014 to 2023},
+urldate = {2023-11-30},
+url = {https://www.statista.com/statistics/799396/worldwide-cost-effects-data-record-breaches/#:~:text=As%20of%202023%2C%20the%20cost,was%204.45%20million%20U.S.%20dollars.},
+year = {2023}
+}
