--- a/Master Arbeit/literatur.bib
+++ b/Master Arbeit/literatur.bib
@@ -529,3 +529,10 @@ urldate = {2023-11-30},
 url = {https://www.statista.com/statistics/799396/worldwide-cost-effects-data-record-breaches/#:~:text=As%20of%202023%2C%20the%20cost,was%204.45%20million%20U.S.%20dollars.},
 year = {2023}
 }
+
+@online{ID65,
+	title = {How can you use IPFS for secure and decentralized data storage?},
+	urldate = {2023-12-08},
+	url = {https://www.linkedin.com/advice/3/how-can-you-use-ipfs-secure-decentralized-data-storage-jozwf#:~:text=IPFS%20enables%20secure%2C%20decentralized%20data,data%20before%20storage%2C%20enhancing%20security.},
+	year = {2023}
+}
